--- a/error.html
+++ b/error.html
@@ -1,1 +1,28 @@
-<h1>Error 404 :Password salah</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Error 404</title>
+		<style type="text/css">
+.tombol
+{
+	margin : 50px;
+	margin-left: auto;
+	margin-bottom: auto;
+	margin-right: auto;
+	border-radius: 30px;
+	background-color: blue;
+	height:50px;
+	width:100px;
+	border-radius: 30px; 
+	color:white;
+}
+</style>
+</head>
+<body>
+	<center><h1>LOGIN ERROR,ANDA KURANG BERUNtuNG</h1></center>
+	<center><p>Silakan kembali</p></center>
+	<center><button type="" class="tombol"><a href="index.html">Kembali</a> 
+
+
+</body>
+</html>
