--- a/error.html
+++ b/error.html
@@ -21,7 +21,7 @@
 <body>
 	<center><h1>LOGIN ERROR,ANDA KURANG BERUNtuNG</h1></center>
 	<center><p>Silakan kembali</p></center>
-	<center><button type="" class="tombol"><a href="index.html" style="color: white">Kembali</a> 
+	<center><button type="" class="tombol"><a href="index.html">Kembali</a> 
 
 
 </body>
