--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 			if (person == "aziz") {
 				alert('Selamat, anda berhasil login!')
-    		window.location.href="aziz.html";
+    		window.location.href="aziz.html"
 			}
 			else{
 				alert('Selamat, anda gagal login!')
